--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,9 @@ This is a pre-release build of the ARA Examples 2.0.
 
 Changes since previous releases:
 
+ARA SDK 2.0 draft 15 (aka 1.9.15) (2021/??/??)
+- allow builds on Cmake 3.12 (even if 3.19 or later is highly recommended due to bug fixes and debugging support)
+
 ARA SDK 2.0 draft 14 (aka 1.9.14) (2021/02/26)
 - applied Apache License 2.0
 - added support for license management if using ARA plug-ins without UI as analysis or time-stretch engine
