--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,8 +3,10 @@ This is a pre-release build of the ARA Examples 2.0.
 Changes since previous releases:
 
 ARA SDK 2.0 draft 15 (aka 1.9.15) (2021/??/??)
+- added option ARA_SETUP_DEBUGGING to Cmake that allows to suppress debug preparations on build bots
 - allow builds on Cmake 3.12 (even if 3.19 or later is highly recommended due to bug fixes and debugging support)
-- various minor Cmake improvements
+- improved debugger support when directly using Cmake in Visual Studio (without generating a solution first)
+- various other minor Cmake improvements
 
 ARA SDK 2.0 draft 14 (aka 1.9.14) (2021/02/26)
 - applied Apache License 2.0
