--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@ Changes since previous releases:
 
 ARA SDK 2.0 draft 15 (aka 1.9.15) (2021/??/??)
 - bugfix in ARATestPlugIn: audio source content grade read from host was not properly exported later on
+- audio file and archive code moved out of TestHost into ExamplesCommon to enable reuse
 - added option ARA_SETUP_DEBUGGING to Cmake that allows to suppress debug preparations on build bots
 - allow builds on Cmake 3.12 (even if 3.19 or later is highly recommended due to bug fixes and debugging support)
 - improved debugger support when directly using Cmake in Visual Studio (without generating a solution first)
