--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@ Changes since previous releases:
 
 ARA SDK 2.0 draft 15 (aka 1.9.15) (2021/??/??)
 - bugfix in ARATestPlugIn: audio source content grade read from host was not properly exported later on
+- decoupled ARATestPlugIn's actual TestAnalysis from ARA
 - audio file and archive code moved out of TestHost into ExamplesCommon to enable reuse
 - ARA audio file chunk handling moved from TestCases to AudioFile classes to enable reuse
 - added option ARA_SETUP_DEBUGGING to Cmake that allows to suppress debug preparations on build bots
