--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@ This is a development build of the ARA Examples 2.1.
 
 ARA SDK 2.1 draft 1 (aka 2.0.1) (2021/??/??)
 - initial draft of ARA audio file chunk authoring directly in the host
+- fixed crashes in archiving test cases with certain compilers
 
 
 === ARA SDK 2.0 release (aka 2.0.001) (2021/05/03) ===
