--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+This is a development build of the ARA Examples 2.2.
+=== PRELIMINARY - DO NOT USE FOR SHIPPING PRODUCTS! ===
+
+Changes since previous releases:
+- no changes yet
+
+
 === ARA SDK 2.1 release (aka 2.1.001) (2022/01/06) ===
 - finalized ARM support for Apple Silicon
 - enable ARA audio file chunk authoring directly in the host
