Initial draft of surround channel arrangement support for audio sources

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,7 +2,7 @@ This is a development build of the ARA Examples 2.2.
 === PRELIMINARY - DO NOT USE FOR SHIPPING PRODUCTS! ===
 
 Changes since previous releases:
-- no changes yet
+- initial draft of surround support for audio sources
 
 
 === ARA SDK 2.1 release (aka 2.1.001) (2022/01/06) ===
