--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,10 +1,8 @@
-This is a development build of the ARA Examples 2.2.
-=== PRELIMINARY - DO NOT USE FOR SHIPPING PRODUCTS! ===
-
-Changes since previous releases:
-- initial draft of surround support for audio sources
+=== ARA SDK 2.2 release (aka 2.2.001) (2022/11/07) ===
+- added surround support for audio sources
 - added crude channel count conversion to test plug-in if audio source and playback renderer channel counts don't match
-- initial draft of tracking whether an audio modification actually modifies the underlying audio source
+- added API to determine whether an audio modification actually modifies the underlying audio source
+- external JUCE_ARA ARAPluginDemo updated to JUCE 7 w/ integrated ARA support via Projucer
 
 
 === ARA SDK 2.1 release (aka 2.1.001) (2022/01/06) ===
