--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+This is a development build of the ARA Examples 2.3.
+=== PRELIMINARY - DO NOT USE FOR SHIPPING PRODUCTS! ===
+
+
+Changes since previous releases:
+- no changes yet
+
+
 === ARA SDK 2.2 release (aka 2.2.001) (2022/11/07) ===
 - added surround support for audio sources
 - added crude channel count conversion to test plug-in if audio source and playback renderer channel counts don't match
