--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@ This is a development build of the ARA Examples 2.3.
 
 Changes since previous releases:
 - various minor cleanups in macOS info.plist files
+- updated VST3 SDK to version 3.7.4 build 25
 
 
 === ARA SDK 2.2 release (aka 2.2.001) (2022/11/07) ===
