Info.plist files cleanups to match Info.plist files created by recent Xcode
- consistent tabs vs. spaces and consistent alphabetic key order
- add LSMinimumSystemVersion with value $(MACOSX_DEPLOYMENT_TARGET)
- CFBundleDevelopmentRegion uses $(DEVELOPMENT_LANGUAGE instead of English
- CFBundlePackageType uses $(PRODUCT_BUNDLE_PACKAGE_TYPE) instead of BNDL
- drop obsolete CFBundleSignature and CSResourcesFileMapped
- CMake adds Info.plist in ara_configure_binary_package instead in each individual target

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,7 @@ This is a development build of the ARA Examples 2.3.
 
 
 Changes since previous releases:
-- no changes yet
+- various minor cleanups in macOS info.plist files
 
 
 === ARA SDK 2.2 release (aka 2.2.001) (2022/11/07) ===
