--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,8 @@ This is a development build of the ARA Examples 2.3.
 
 
 Changes since previous releases:
-- various minor refactorings and cleanups in plug-in hosting code
+- initial draft of Audio Unit version 3 support (App Extension)
+- various related refactorings and cleanups in plug-in hosting code
 - various minor cleanups in macOS info.plist files
 - updated VST3 SDK to version 3.7.4 build 25
 
