--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ Changes since previous releases:
 - initial draft of Audio Unit version 3 support (App Extension)
 - various related refactorings and cleanups in plug-in hosting code
 - IPCDemo refactored and merged into ARATestHost, drafting a generic ARA IPC implementation
+- IPC now also supports using VST3 (was previously limited to Audio Units)
 - various cleanups in macOS info.plist files
 - updated Audio Unit SDK from the old CoreAudioUtilityClasses.zip sample code download to
   Apple's current release on github (note: requires update to C++17 for affected targets)
