--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,7 +8,7 @@ Changes since previous releases:
 - various related refactorings and cleanups in plug-in hosting code
 - initial draft of generic ARA IPC implementation in ARA_Library
 - IPCDemo refactored and merged into ARATestHost, utilizing new ARA_IPC library draft
-- IPC now also supports using VST3 (was previously limited to Audio Units)
+- IPC now also supports using VST3 or CLAP (was previously limited to Audio Units)
 - IPC now also works on Windows (was previously limited to macOS)
 - IPC now also supports using pugixml as encoder (was previously limited to the macOS-only CFDictionary)
 - various cleanups in macOS info.plist files
