--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -13,6 +13,7 @@ Changes since previous releases:
 - IPC now also supports using VST3 or CLAP (was previously limited to Audio Units)
 - IPC now also works on Windows (was previously limited to macOS)
 - IPC now also supports using pugixml as encoder (was previously limited to the macOS-only CFDictionary)
+- added various threading and state validations to TestHost
 - various cleanups in macOS info.plist files
 - updated Audio Unit SDK from the old CoreAudioUtilityClasses.zip sample code download to
   Apple's current release on github (note: requires update to C++17 for affected targets)
