--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -30,7 +30,7 @@ Changes since previous releases:
 
 === ARA SDK 2.1 release (aka 2.1.001) (2022/01/06) ===
 - finalized ARM support for Apple Silicon
-- enable ARA audio file chunk authoring directly in the host
+- enabled ARA audio file chunk authoring directly in the host
 - fixed crashes in archiving test cases with certain compilers
 
 
