--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,7 @@ This is a development build of the ARA Examples 2.3.
 
 
 Changes since previous releases:
+- AAX is now fully supported as companion API
 - CLAP is now fully supported as companion API
 - initial draft of Audio Unit version 3 support (App Extension)
   Note that macOS code signing is required for proper loading in sandboxes such as App Extensions,
