--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -15,6 +15,8 @@ Changes since previous releases:
 - IPC now also works on Windows (was previously limited to macOS)
 - IPC now also supports using pugixml as encoder (was previously limited to the macOS-only CFDictionary)
 - added API to notify the host when the private, opaque document state changes (to trigger saving it)
+  and incremented API generation to allow plug-ins to indicate that they fully conform to sending
+  notifications whenever any part of their persistent state changes
 - added new partial persistency split archives test case to TestHost
 - added various threading and state validations to TestHost
 - various cleanups in macOS info.plist files
