--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -12,6 +12,7 @@ Changes since previous releases:
 - IPC now also supports using VST3 or CLAP (was previously limited to Audio Units)
 - IPC now also works on Windows (was previously limited to macOS)
 - IPC now also supports using pugixml as encoder (was previously limited to the macOS-only CFDictionary)
+- C++14 is now consistently required on all platforms
 
 
 === ARA SDK 2.3 release (aka 2.3.001) (2025/11/07) ===
