--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,7 @@ This is a development build of the ARA Examples 3.0.
 
 
 Changes since previous releases:
-- support for ARA 1 dropped
+- support for ARA 1 and 2.0 Draft dropped
 - initial draft of Audio Unit version 3 support (App Extension)
   Note that macOS code signing is required for proper loading in sandboxes such as App Extensions,
   configured via CMAKE_XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY and CMAKE_XCODE_ATTRIBUTE_DEVELOPMENT_TEAM.
